Add shell support for Gadgets.java